# DIMOP_2.1

./: .env.example  .gitignore  LICENSE  README.md  nodes_client.py
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  database.py
backend/app/models/: db.py  schemas.py
backend/app/routers/: __init__.py  materials.py  nodes.py  projects.py  relations.py  score.py  websocket.py
backend/tests/: test_api.py  test_delete_relations.py  test_graph_edges.py  test_nodes.py  test_projects.py  test_websocket_broadcast.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  filterParentCandidates.ts  index.css  wsMessage.ts
frontend/src/__tests__/: filterParentCandidates.test.ts  layout.test.ts  wsMessage.test.ts
frontend/src/components/: ComponentTable.tsx  GraphCanvas.tsx  MaterialTable.tsx  useUndoRedo.ts
