[tool.poetry]
name = "circular-design-backend"
version = "0.1.0"
description = "Backend for Circular Design Toolkit"
authors = ["OpenAI Assistant <>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111"
uvicorn = {extras = ["standard"], version = "^0.29"}
neo4j = "^5.16"
pydantic = "^2.7"
httpx = "^0.27"
sqlalchemy = "^2.0"
aiosqlite = "0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
